portal modul shows product information in a bootstrap app

--- a/modules/global/src/com/company/ordermanagement/entity/messages.properties
+++ b/modules/global/src/com/company/ordermanagement/entity/messages.properties
@@ -25,4 +25,6 @@ Customer.city = City
 Customer = Customer
 Order.customer = Customer
 Customer.orders = Orders
+Product.description = Description
+Product.images = Images
 
